@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
     - jbj: fix several typos noticed by the translation project.
     - jbj: add -noautoreq/--noautoprov options to rpmbuild.
     - proyvind: Rename rpmcliImportPubkey() -> rpmtsImportPubkey() (from and for a hint of rpm.org API compatibility;)
